<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity"
    android:background="@color/primary_light">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbox_step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="65dp"
        android:text="@string/step1"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_project" />

    <CheckBox
        android:id="@+id/cbox_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="283dp"
        android:text="@string/step2"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbox_step1" />

    <CheckBox
        android:id="@+id/cbox_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:text="@string/step3"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbox_step2" />

    <CheckBox
        android:id="@+id/cbox_step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="177dp"
        android:text="@string/step4"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbox_step3" />

    <CheckBox
        android:id="@+id/cbox_step5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="230dp"
        android:text="@string/step5"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbox_step4" />

    <CheckBox
        android:id="@+id/cbox_step6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="243dp"
        android:text="@string/step6"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbox_step5" />

    <TextView
        android:id="@+id/tv_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="297dp"
        android:text="@string/project_name"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/action_back"
        app:layout_constraintEnd_toStartOf="@+id/tv_project"
        app:layout_constraintStart_toStartOf="@+id/toolbar_project"
        app:layout_constraintTop_toTopOf="@+id/toolbar_project"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="65dp"
        android:text="@string/info"
        android:textSize="11sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_project" />

</android.support.constraint.ConstraintLayout>